# insight

./: CMakeLists.txt  README.md
cmake/: CreateInsightConfig.cmake  FindAccelerateBLAS.cmake  FindCMocka.cmake  FindOpenBLAS.cmake  InsightFindBLAS.cmake  InsightInstallPublicHeaders.cmake  InsightListBLASVendors.cmake  InsightPrettyPrintCMakeList.cmake  PrettyPrintCMakeList.cmake  config.h.in
include/ins/: ins_block.h  ins_errno.h  ins_matrix.h  ins_matrix_int.h  ins_vector.h
include/ins/block/: ins_block_double.h  ins_block_float.h  ins_block_int.h
include/ins/vector/: ins_vector_double.h
include/insight/: hello.h  insight_errno.h  insight_matrix.h  insight_matrix_int.h
internal/ins/: CMakeLists.txt  errno.c  errno_test.c  ins_blas.h  malloc_wrappers.c  malloc_wrappers.h  matrix_init.c  matrix_init_source.c  matrix_int_test.c  matrix_templates_off.h  matrix_templates_on.h  templates_off.h  templates_on.h
internal/ins/block/: block_double_test.c  block_float_test.c  block_int_test.c  init.c  init_source.c
internal/ins/vector/: file.c  file_source.c  init.c  init_source.c  minmax.c  minmax_source.c  oper.c  oper_source.c  vector_double_file_test.c  vector_double_init_test.c  vector_double_minmax_test.c  vector_double_oper_test.c  vector_double_test.c
internal/insight/: CMakeLists.txt  errno.c  errno_test.c  hello.c  hello_test.c  malloc_wrappers.c  malloc_wrappers.h  matrix_init.c  matrix_init_source.c  matrix_int_test.c  matrix_templates_off.h  matrix_templates_on.h
